fixed test cases for uuid